Add error type to the ServerError.
