# app-ktor/src/main/kotlin/ru/otus/opinion/backend/ktor/controllers/QuestionControllerImpl.kt
@@ -7,6 +7,7 @@ import io.ktor.response.*
 import ru.otus.opinion.backend.common.context.RequestContext
 import ru.otus.opinion.backend.common.context.RequestContext.RequestType
 import ru.otus.opinion.backend.common.models.ErrorLevel
+import ru.otus.opinion.backend.common.models.ErrorType
 import ru.otus.opinion.backend.common.models.ServerError
 import ru.otus.opinion.backend.transport.mapping.setQuery
 import ru.otus.opinion.backend.transport.mapping.toResponse
@@ -33,15 +34,25 @@ class QuestionControllerImpl(private val questionService: QuestionService) : Que
         try {
             action(ctx)
         } catch (ex: JsonParseException) {
-            ctx.addError(ServerError(level = ErrorLevel.ERROR, message = "Wrong json in request: ${ex.message}"))
+            ctx.addError(
+                ServerError(
+                    level = ErrorLevel.ERROR,
+                    errorType = ErrorType.REQUEST_PARSING_ERROR,
+                    message = "Wrong json in request: ${ex.message}",
+                )
+            )
         } catch (ex: Throwable) {
-            ctx.addError(ServerError(level = ErrorLevel.ERROR, message = "Server error: ${ex.message}"))
+            ctx.addError(
+                ServerError(
+                    level = ErrorLevel.ERROR,
+                    errorType = ErrorType.SERVER_ERROR,
+                    message = "Server error: ${ex.message}"
+                )
+            )
         }
         call.respond(ctx.toResponse())
     }
-
 }
-
 
 /**
  * Instead of controller class can use ApplicationCall extensions.
