# logics/src/main/kotlin/ru/otus/opinion/logics/workers/RequestTypeChecker.kt
@@ -3,6 +3,7 @@ package ru.otus.opinion.logics.workers
 import ru.otus.opinion.backend.common.context.RequestContext
 import ru.otus.opinion.backend.common.context.State
 import ru.otus.opinion.backend.common.cor.dsl.builders.ChainBuilder
+import ru.otus.opinion.backend.common.models.ErrorType
 import ru.otus.opinion.backend.common.models.ServerError
 
 internal fun ChainBuilder<RequestContext>.checkRequestType(
@@ -15,7 +16,9 @@ internal fun ChainBuilder<RequestContext>.checkRequestType(
         execute {
             state = State.FAILED
             addError(
-                ServerError(message = "Wrong processing chain for request type $requiredRequestType. Expected request type: $requestType")
+                ServerError(
+                    errorType = ErrorType.INITIALIZATION_ERROR,
+                    message = "Wrong processing chain for request type $requiredRequestType. Expected request type: $requestType")
             )
         }
     }
